--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aleksandrteterin</title>
+  </head>
+  <body>
+    <header>
+      <img src="" alt="" />
+      <h1></h1>
+      <p></p>
+    </header>
+    <main>
+      <article>
+        <header>
+          <a href=""><h2></h2></a>
+        </header>
+        <p></p>
+      </article>
+      <article>
+        <header>
+          <a href=""><h2></h2></a>
+        </header>
+        <p></p>
+      </article>
+      <article>
+        <header>
+          <a href=""><h2></h2></a>
+        </header>
+        <p></p>
+      </article>
+      <article>
+        <header>
+          <a href=""><h2></h2></a>
+        </header>
+        <p></p>
+      </article>
+      <article>
+        <header>
+          <a href=""><h2></h2></a>
+        </header>
+        <p></p>
+      </article>
+    </main>
+    <footer>
+      <p></p>
+    </footer>
+  </body>
 </html>
