--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css" />
     <title>Aleksandrteterin</title>
   </head>
   <body>
-    <header>
+    <header class="logo">
       <img src="./imgs/img-my-logo.jpg" alt="photo by the author" />
       <h1>Привет, меня зовут Александр.</h1>
       <p>
@@ -16,9 +17,9 @@
       </p>
     </header>
     <main>
-      <article>
+      <article class="learn-js">
         <header>
-          <a href="//learn.javascript.ru/"><h2>LEARN.JAVASCRIPT.RU</h2></a>
+          <h2><a href="//learn.javascript.ru/">LEARN JAVASCRIPT</a></h2>
         </header>
         <p>
           Данный источник очень сложный для новичка, поэтому рекомендую сначала
@@ -37,9 +38,8 @@
         </p>
         <ul>
           <li>
-            Веб-версия:
             <a href="//learn.javascript.ru/"
-              >LEARN.JAVASCRIPT.RU(бесплатная)
+              >Веб-версия: LEARN JAVASCRIPT(бесплатная)
             </a>
           </li>
           <li>
@@ -75,11 +75,13 @@
           будущем будет поддерживаться, спасибо тебе Илья и твоей команде!
         </p>
       </article>
-      <article>
+      <article class="mdn">
         <header>
-          <a href="//developer.mozilla.org/ru/"
-            ><h2>MDN(Mozilla Developer Network)</h2></a
-          >
+          <h2>
+            <a href="//developer.mozilla.org/ru/"
+              >MDN(Mozilla Developer Network)</a
+            >
+          </h2>
         </header>
         <p>Ресурсы для разработчиков от разработчиков.</p>
         <p>Данный источник содержит огромную базу информации по:</p>
@@ -133,7 +135,7 @@
         </p>
         <p>Спасибо MDN за ваш труд!!!</p>
       </article>
-      <article>
+      <article class="github">
         <header>
           <h2>
             <a href="//git-scm.com/">Git</a> and
@@ -166,9 +168,9 @@
         </p>
         <span><a href="//github.com/bumbu5571">Мой github профиль</a></span>
       </article>
-      <article>
+      <article class="free-code-camp">
         <header>
-          <a href="//www.freecodecamp.org"><h2>freeCodeCamp</h2></a>
+          <h2><a href="//www.freecodecamp.org">freeCodeCamp</a></h2>
         </header>
         <p>freeCodeCamp — это веб-приложение по обучению программирования.</p>
         <p>
@@ -190,9 +192,9 @@
           - Адаптивный веб-дизайн.
         </p>
       </article>
-      <article>
+      <article class="elbrus-boot-camp">
         <header>
-          <a href="//elbrusboot.camp/"><h2>Эльбрус буткемп</h2></a>
+          <h2><a href="//elbrusboot.camp/">Эльбрус буткемп</a></h2>
         </header>
         <p>
           Что такое буткемп?<br />
